<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gefilte Fun!</string>
    <string name="login">התחברות</string>
    <string name="about_us">אודות</string>
    <string name="choose">בחירה</string>
    <string name="email">אימייל</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="register">הרשמה</string>
    <string name="welcome">שלום, </string>
    <string name="choose_game">בחירת משחק</string>
    <string name="trivia">טריוויה</string>
    <string name="vocabulary">מאגר מילים</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="analogies">קבוצות מילים</string>
    <string name="wedding_info" tools:ignore="TypographyEllipsis">"חתונות בשבילי זו שמחה מאוד גדולה. ההודעה על הקמת בית יהודי והתרחבות המשפחה, עוד בית נאמן בתקווה קם בישראל, עוד ילדים, עוד הרחבה של העם היהודי זה תמיד מרגש אותי. זה קדוש במגזר שלנו.
אם אני שכנה אני אבוא רק לחופה כי אני לא בגיל של לרקוד אבל חשוב לי להיות במעמד החופה, זה זמן מרגש מאוד, קדוש מאוד, זמן לבכי, שערי שמיים נפתחים וזה מרגיש אפילו כמו תחילתו של יום כיפור- כבר בבוקר החתונה הכל מרגיש קדוש, כאילו מתכוננים למשהו גדול מאיתנו...
החופה זה קטע מאוד מרומם, אתה מתפלל ומבקש סליחה על החתן והכלה וגם על עצמך, ואז אחריי זה משתחרר. בבת אחת משתחררת לי הרצינות שאני שומרת כל יום. אז בחופה אני מרגישה רגועה.
חתונה זו הזדמנות לשמחה וגם מפגש חברתי וזמן לחידוש קשרים, לצעירים זה ממש מועדון ריקודים והבנות בעיקר מגיעות רוקדות עם הכלה, זו יציאה של מועדון לצעירים. גם אם יש אצלנו הרבה חתונות, תמיד אנחנו שמחים ואומרים \'איזה כיף יש חתונה\', ממש בילוי חרדי לצעירות, זה המקום של חרדים, ובעיקר חרדיות, להשתחרר." (ג\', חרדית מבני ברק)</string>
    <string name="censor_info">אישה חרדית לא יכולה לשאול גבר "מה שלומך", לא משנה אם הוא חילוני או חרדי. "אני גם לא מצפה שהם ישאלו אותי. אני מרגישה שנעלבים ממני בסופר או בעבודה כשאני לא שואלת \'מה שלומך\' ולא קונה פרחים ליומולדת של מישהו שעובד איתי כבר הרבה זמן, אבל זה לא עולה לי לראש בכלל. 
מבחינתי זה ברור שצריך לשמור על מרחק, זה דיסטנס שאנחנו חרדים לשמר אותו. אנחנו החרדיות ממש "מתאמצות" לשמור על דיסטנס. נגיד גם אם באמת מסקרן אותי מאוד מה שלומו של אדם מסוים, נגיד מישהו עובד איתי שאני יודעת שאשתו חולה, כמה שזה קשה, אני אשכנע את עצמי שזה לא לעניין, מזכירה לעצמי שזה לא אמור לעניין אותי. אם הוא רוצה, הוא מוזמן לשתף, ואני כמובן אקשיב, אבל קשה לי כשנעלבים ממני כשאני לא יוזמת את השיחות בעצמי. 
אני צריכה ממש לשמור את עצמי מפניי בנים. יש בנות חילוניות שמחמיאות לי על הלבוש החדש, במיוחד בימים שאני "דופקת הופעה". אני מוחמאת, אבל ממשיכה הלאה, יודעת שאסור לי לענות, לא מתאים לתת יד להתייחסות למראה שלי." (ש\', חרדית מבני ברק)
</string>
    <string name="workplace_info">"אני עובדת בבית ספר יסודי ממלכתי-דתי, אז הסגל שלנו מעורב, דתיים וחילונים, וכך גם התלמידים. 
ההבדל המהותי זה שלדתיים יש את ה\'אמונת בסיס\' שיש בורא לעולם, הדרך חיים שלנו היא דרך של תורה ומצוות. אנשים חילונים חיים בדרך אחרת, גם אם הם מאמינים. 
בסופו של דבר, התורה אומרת שדרך ארץ קדמה להכל. אז מבחינתי כשאני מגיעה לעבודה, לסביבה מעורבת, אני מסתכלת על האדם באשר הוא אדם, לא משנה במה הוא מאמין. אם הוא בעל מידות טובות וערכים טובים אז זה לא משנה לי אם הוא חילוני או חרדי, יש הרבה חילונים שהם הרבה יותר טובים מדתיים שאני מכירה שהם חסרי ערכים ושאין להם מידות טובות. מבחינתי הדגש הוא לא על \'מה אני מאמין\' אלא על \'איזה אדם אני\'. 
הרבה פעמים העבודה בסביבה מעורבת מעוררת שאלות ודילמות וזה מאוד מעניין לעבוד עם אנשים שהם שונים ממך ושיש להם השקפת עולם שונה. אני לומדת כל יום מכל אדם בעבודה על הקבוצות השונות בחברה, וזה ממש מסקרן ומרתק אותי! זה חוויה מבחינתי והזדמנות מיוחדת לחקור ולהכיר את האנשים שבסוף הם מסביבי כל יום." (ר\', חרדית מבני ברק)
</string>
    <string name="prairs_info" tools:ignore="TypographyEllipsis">הידעת?
המושג בו"ה- ברכה והצלחה- הומצא על ידי הרב חיים קנייבסקי:
"היו תורים ארוכים להגיע אליו, אז קיצר את כל הברכות ל"ברכה והצלחה",
ואז אחרי עוד כמה שנים, כשחצה את גיל 90, המציא את הקיצור בו"ה".
"לפני שבועיים ניגש לרב אדם שעמד להשיא את בתו ביום ראשון כ"ו בטבת, וביקש את ברכתו". האיש ציין כי התייעץ עם חברי כנסת, שאמרו לו שגם אם יהיה סגר – הוא יתחיל רק לקראת השבוע שלאחר כ"ו טבת, ולכן ביום ראשון המדובר וודאי שלא יהיה סגר. מרן השיב להפתעתו של אותו יהודי: "תקדים את החתונה ליום חמישי". מיותר לציין שאכן כך עשה אותו מחותן, והנה הוחלט על סגר מוחלט מחמישי בחצות. מובן שאילו היה משאיר את תאריך החתונה ליום ראשון, כמה צער ועוגמת נפש היו מנת חלקו. בנוסף, בעוד שבדרך כלל הרב מברך את ברכתו הקבועה "ברכה והצלחה", באותה פעם אמר: "רפואה שלמה". היהודי נדהם, ומיהר לבצע בדיקת קורונה. מיותר לציין כי הבדיקה יצאה חיובית... אותו אדם סיפר כי כלל לא חש בתסמינים, לא היה בקרבת חולה קורונה ולא עלה בדעתו שהוא חיובי לנגיף".
</string>
    <string name="young_couple_title">"זו\"צ"</string>
    <string name="young_couple_details">"זוג צעיר - לא ישלמו על כלום, יסתודדו בצד"</string>
    <string name="pkak_title">"פקק"</string>
    <string name="pkak_details">"אחים שתקועים בפקק ולא יכולים להתחתן כי הבכור עוד לא התחתן"</string>
    <string name="listener_title">"שומע/ת"</string>
    <string name="listener_details">"פתוחה להצעות שידוכין"</string>
    <string name="sidur_title">"סידור מלא"</string>
    <string name="sidur_details">"כל הבילה של חתונה ותחילת חיי נישואין"</string>
    <string name="vert_title">"ווארט"</string>
    <string name="vert_details">"טקס אירוסין וחלוקת תשלומים בין הורי הזוג המאורס"</string>
    <string name="wedding_title">"חתונה"</string>
    <string name="wedding_details">"יש תור לכלה לקבל לחיצת ידיים וברכה"</string>
    <string name="private_title">"ייחוד"</string>
    <string name="private_details">"מיד אחרי החופה הולכים לחדר ייחוד, המלווים מחכים ליד הדלת לוודא שנעול ואף אחד לא מפריע/ יש דיבייט אם זה נחשב ייחוד מיד אחרי החופה או שמתאים גם \"השלב הסופי בבית\""</string>
    <string name="cheer_title">"משמחים"</string>
    <string name="cheer_details">"אלה שלא מוזמנים לחופה, אלא רק מגיעים לריקודים, באו לשמח וכנראה לא יקבלו אוכל או ברכה מהכלה. באו למלא את הרחבה ולא מביאים מתנה"</string>
    <string name="bride_title">"ברוכה הכלה"</string>
    <string name="bride_details">"תור ארוך לברכות מהכלה ביום חתונתה, יש לה זמן לזה בל\"ז לפני החופה"</string>
    <string name="vadal_title">"וד\"ל"</string>
    <string name="vadal_details">"ודי לחכימא (חוזר הרבה כי לא רוצים לפרט על הרבה דברים- פרסומות לרבייה ותפקוד מיני- מוצרים לשלמות הבית, ילדים בקניון צריכים לשמור על העיניים וד"ל, עדיף כמה שפחות לפרט)"</string>
    <string name="achmal_title">"אכמ\"ל"</string>
    <string name="achmal_details">אין כאן מקום לפרט (חלק עיקרי באג\'נדה החרדית, מתעסקים בלשמור שלא לחשוף ילדים להרבה דברים, מוזיל את הנפש, פוגע בצניעות ואז צריך להישמר- \"החרדי שומר על הנפש שלו במקסימום\", בגלל זה יש כל כך הרבה עידון)</string>
    <string name="modest_title">"יפה השתיקה"</string>
    <string name="modest_details">"יפה השתיקה, יפה הצניעות, לא לפני הילדים"</string>
    <string name="fastnisht_title">"פאסטנישט"</string>
    <string name="fastnisht_details">"לא מתאים (מיידיש)"</string>
    <string name="nisht_title">"נישט אין שאבעס גערעט"</string>
    <string name="nisht_details">"נאמר בשבת כאשר אומרים משפט שלא ראוי להגיד, כגון \"אל תשכח את המפתחות של האוטו, נישט אין שאבעס גערעט\"."</string>
    <string name="woman_title">"אישה במצב"</string>
    <string name="woman_details">"אישה בהריון, אישה בה\, (היריון, הנקה)"</string>
    <string name="hold_title">"אוחז/ת"</string>
    <string name="hold_details">"מבין/קולט/מודע/תפס"</string>
    <string name="basad_title">"בס\"ד"</string>
    <string name="basad_details">"בסעתא דשמייה (ברמה היומיום)/ חייב להגיד מזמור לתודה (פרק בתהילים שמודים לקדוש ברוך הוא באופן יומיומי)/ להודות לאצבע אלוקים/חיבוק משמים- אישיו מאוד רציני ויומיומי/"</string>
    <string name="hashem_title">כל מה שקורה זה מאת השם</string>
    <string name="hashem_details">כשמחלקים קלפים במשחק ילדים אז אומרים מילה על כל קלף \"כל\", \"מה\", \"שקורה\", \"זה\", \"מאת\" השם\"- סטייל מה שיוצא אני מרוצה.</string>
    <string name="go_prair_title">"לכו תתפללו"</string>
    <string name="go_prair_details">"לכו תחפרו לקדוש במקום לי"</string>
    <string name="hiloni_title">"ציויינים"</string>
    <string name="hiloni_details">"כינוי לחילונים (ציונים)"</string>
    <string name="shcoiech_title">"שכוייח"</string>
    <string name="shcoiech_details">"יישר כוח, תודה רבה"</string>
    <string name="babies_title">"תינוקות שנשבו"</string>
    <string name="babies_details">"כל מי שנמנע ממנו מינקות לשמור מצוות (בד\"כ מדובר על חילונים)."</string>
    <string name="goi_title">"שייגעצ"</string>
    <string name="goi_details">"גוי, מילת גנאי לעובר עבירה"</string>
    <string name="dos_and_donts_title">"עשה/אל תעשה לדברים של בינו לבינה"</string>
    <string name="dos_and_donts_details">"אישה לא יכולה לשאול גבר \"מה שלומך\", והפוך - אל תעלבו אם עובד חרדי או חרדית לא שואל מה שלומך ולא קונה פרחים ליומולדת כי זה דיסטנס שהם חייבים לשמר - הן ממש \"מתאמצות\" לשמור על דיסטנס, גם אם מסקרן אותה מאוד מה שלומו של אדם מסוים, היא תעבוד על זה שלא תתעניין (מספרת על אחד הסייעים שעובד איתה שנים, ועבדה על \"לשמור\" על עצמה מפניו, לא להגיד תודה כשמחמיאים על לבוש)."</string>
    <string name="gossip_title">"צ\'ונט"</string>
    <string name="gossip_details">"אווירה - אנשים שיושבים ומרכלים"</string>
    <string name="news_title">"נייעס"</string>
    <string name="news_details">"פעולה - כמו ניוז - אדם שיושב וטוחן חדשות/מרכל"</string>
    <string name="angry_title">"להכעיס"</string>
    <string name="angry_details">"(במלעיל) לעשות דווקא"</string>
    <string name="yedish_title">"יידישקייט"</string>
    <string name="yedish_details">"כינוי לרוחניות יהודית (קצת יידיש לא יזיק לו).</string>
    <string name="zatzal_title">זצ\"ל"</string>
    <string name="zatzal_details">זיכרון דציק לברכה</string>
    <string name="hundred_title">עד 120</string>
    <string name="hungred_details">משה רבינו חי עד גיל 120, והיה עוד צלול</string>
    <string name="water_title">מים אחרונים</string>
    <string name="water_details">בסיום סעודה חובה ליטול ידיים לפני ברכת המזון</string>
    <string name="food_title">ברכבת המזון</string>
    <string name="food_details">ברכה בסיום ארוחה הכוללת לחם</string>
    <string name="last_title">ברכה אחרונה</string>
    <string name="last_details">ברכה בסיום ארוחה שאינה כוללת לחם</string>
    <string name="queen_title">מלווה מלכה</string>
    <string name="queen_details">ארוחה לפני צאת שבת</string>
    <string name="eastern_title">מיזרוחניק</string>
    <string name="eastern_details">כינוי לדתי לאומי</string>
    <string name="shahrit_title">שחרית</string>
    <string name="shahrit_details">התפילה הראשונה בבוקר</string>
    <string name="minha_title">מנחה</string>
    <string name="minha_details">התפילה השנייה, אחת משלות הנאמרת בשעות בין הערביים</string>
    <string name="arvit_title">מעריב/ערבית</string>
    <string name="arvit_details">התפילה השלישית הנאמרת במשך היום לאחר שקיעת החמה</string>
    <string name="workplace_blank_text">עבדתי עם __________ אחד שהקפיד לשמור כל עובד בטלפון עם שם ותמונה. גיליתי שהוא לקח תמונה צנועה שלי שהייתה תלויה במשרד, צילם והעלה לטלפון שלו. אמרתי לו שזה __________ והוא לא הבין למה, הוא ממש התווכח ואמר שהוא נשוי אז זה ממקום תמים ועוזר לו לזכור אנשים, הוא ביקש שאסביר מה הבעיה אבל __________, פשוט שימחק __________. הרגשתי שה __________ הזה סתם בא __________.</string>
</resources>