<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserScreen"
    android:padding="15dp">

    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices_layout"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:id="@+id/choose_game"
            android:text="@string/choose_game"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/trivia_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/trivia"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vocabulary"
            android:layout_margin="15dp"
            android:text="@string/vocabulary"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_c"
            android:layout_margin="15dp"
            android:text=""
            android:textColor="@color/white"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_d"
            android:layout_margin="15dp"
            android:text=""
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>