<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:padding="50dp"
    tools:context=".Register">

  <TextView
      android:text="@string/register"
      android:textSize="30sp"
      android:textStyle="bold"
      android:gravity="center"
      android:layout_marginBottom="50dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </com.google.android.material.textfield.TextInputLayout>

  <ProgressBar
      android:id="@+id/progress_bar"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <Button
      android:id="@+id/register_btn"
      android:text="@string/register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"/>

</LinearLayout>